syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.market.grpc";
option java_outer_classname = "MarketProto";

package market;

// ====== REQUESTS ======

message DataRequest {
  string symbol = 1;
  string interval = 2;
}

// ====== RESPONSES ======

message MetaData {
  string symbol = 1;
  string interval = 2;
  string currency = 3;
  string exchange_timezone = 4;
  string exchange = 5;
  string mic_code = 6;
  string type = 7;
}

message PriceEntry {
  string datetime = 1;
  string open = 2;
  string high = 3;
  string low = 4;
  string close = 5;
  string volume = 6;
}

message DataResponse {
  MetaData meta = 1;
  repeated PriceEntry values = 2;
  string status = 3;
}

// ====== SERVICE ======

service MarketService {
  rpc GetData(DataRequest) returns (DataResponse);
}
